feat(ingest): Initial dependencies to Pipfile and setup.py

--- a/Pipfile
+++ b/Pipfile
@@ -6,10 +6,32 @@ verify_ssl = true
 [dev-packages]
 pytest = "*"
 pytest-cov = "*"
+pytest-django = "*"
+factory-boy = "*"
 
 [packages]
 peptide2genome = {editable = true,path = "."}
-pset-utils = {editable = true,git = "https://github.com/csci-e-29/2019sp-pset-utils-jaketeyjake"}
+# pset-utils = {editable = true,git = "https://github.com/csci-e-29/2019sp-pset-utils-jaketeyjake"}
+pset-utils = {editable = true,path = "../2019sp-pset-utils-jaketeyjake"}
+django = "*"
+django-environ = "*"
+djangorestframework = "*"
+django-model-utils = "*"
+argon2-cffi = "*"
+django-allauth = "*"
+django-crispy-forms = "*"
+django-extensions = "*"
+coreapi = "*"
+pandas = "*"
+numpy = "*"
+dask = {extras = ["dataframe"],version = "*"}
+fastparquet = "*"
+s3fs = "*"
+awscli = "*"
+django-debug-toolbar = "*"
+biopython = "*"
+setuptools-scm = "*"
 
 [requires]
 python_version = "3.7"
+
