feat(ingest): initial Django setup and config

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,8 @@ testpaths =
     peptide2genome
 norecursedirs =
     migrations
-
+DJANGO_SETTINGS_MODULE =
+    config.settings.test
 python_files =
     test_*.py
     *_test.py
